app info screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
     implementation("androidx.hilt:hilt-work:1.0.0")
     kapt("androidx.hilt:hilt-compiler:1.0.0")
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
+
+    // System UI controller
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 }
