--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,5 +98,9 @@ dependencies {
     // System UI controller
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
+    // Live Data
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+    // Coil Library
+    implementation("io.coil-kt:coil-compose:1.4.0")
 }
