--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
 
     // Google SignIn
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
+
+    // Targeting S+
+    implementation 'androidx.work:work-runtime-ktx:2.7.0'
 }
