--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,8 @@ dependencies {
 
     // Swipe to refresh
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.2-alpha"
+
+    // Pager
+    implementation "com.google.accompanist:accompanist-pager:0.19.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
 }
